Fixed positioning of POI(non-workspace)'s card
No longer covering up the search bar on mobile

--- a/src/components/WorkSpace/WorkSpace.scss
+++ b/src/components/WorkSpace/WorkSpace.scss
@@ -285,6 +285,10 @@ h5 {
       margin-bottom: 8%;
       border-radius: 10px;
   }
+
+  .userAlertCard {
+    top: 15%;
+  }
 }
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
